# django-ninja-tutorial

./: Dockerfile  compose.yaml  pyproject.toml
core/: api.py  auth.py  schemas.py
devices/: admin.py  api.py  models.py  schemas.py
devices/api/: __init__.py  device.py  location.py
devices/fixtures/: device.json  location.json
devices/migrations/: 0001_initial.py
devices/schemas/: __init__.py  device.py  location.py
devices_backend/: api.py  settings.py  urls.py
nginx/: nginx.conf
rpg/: admin.py  auth.py  inlines.py  models.py
rpg/api/: __init__.py  character.py  characterclass.py  guild.py  item.py  quest.py  rarity.py
rpg/fixtures/: character.json  characterclass.json  guild.json  item.json  quest.json  rarity.json  statistics.json  theme.json
rpg/management/commands/: populate_database.py
rpg/migrations/: 0001_initial.py  0002_item.py  0003_item_character.py  0004_character_experience_character_experience_level_up_and_more.py  0005_rename_experience_level_up_character_max_experience.py  0006_statistics_sustained_damage.py  0007_statistics_depleted_mana.py  0008_item_icon.py
rpg/schemas/: __init__.py  character.py  characterclass.py  guild.py  item.py  quest.py  rarity.py  statistics.py
